[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/tileset.tres" type="TileSet" id=1]
[ext_resource path="res://prefabs/Upstairs.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/BaseLevel.gd" type="Script" id=3]
[ext_resource path="res://prefabs/Downstairs.tscn" type="PackedScene" id=4]

[node name="BaseLevel" type="Node2D"]
script = ExtResource( 3 )

[node name="MainTileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
collision_layer = 1024
collision_mask = 0
format = 1

[node name="ForegroundTileMap" type="TileMap" parent="."]
z_index = 2
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1

[node name="Interactive" type="Node2D" parent="."]

[node name="Upstairs" parent="Interactive" instance=ExtResource( 2 )]
position = Vector2( 120, 152 )

[node name="Downstairs" parent="Interactive" instance=ExtResource( 4 )]
position = Vector2( 40, 152 )

[node name="StartingPosition2D" type="Position2D" parent="."]
position = Vector2( 104, 152 )

[connection signal="hero_entered" from="Interactive/Upstairs" to="." method="_on_Upstairs_hero_entered"]
[connection signal="hero_entered" from="Interactive/Downstairs" to="." method="_on_Downstairs_hero_entered"]
